--- a/src/styles/shell.scss
+++ b/src/styles/shell.scss
@@ -56,14 +56,14 @@ h1 {
   transition: transform .233s cubic-bezier(0, 0, .21, 1) .1s;
   z-index: 1000;
 
-  .headerButton {
+  .button {
     width: 24px;
     height: 24px;
     margin-right: 16px;
     text-indent: -30000px;
     overflow: hidden;
-    opacity: 0.54;
-    transition: opacity 0.333s cubic-bezier(0, 0, 0.21, 1);
+    opacity: .54;
+    transition: opacity .333s cubic-bezier(0, 0, .21, 1);
     border: none;
     outline: none;
     cursor: pointer;
@@ -95,38 +95,43 @@ h1 {
 
 @keyframes rotate {
   from {
-    -webkit-transform: rotate(0);
-            transform: rotate(0); }
+    transform: rotate(0);
+  }
   to {
-    -webkit-transform: rotate(450deg);
-            transform: rotate(450deg); } }
+    transform: rotate(450deg);
+  }
+}
 
 @-webkit-keyframes line {
   0% {
     stroke-dasharray: 2, 85.964;
-    -webkit-transform: rotate(0);
-            transform: rotate(0); }
+    transform: rotate(0);
+  }
   50% {
     stroke-dasharray: 65.973, 21.9911;
-    stroke-dashoffset: 0; }
+    stroke-dashoffset: 0;
+  }
   100% {
     stroke-dasharray: 2, 85.964;
     stroke-dashoffset: -65.973;
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg); } }
+    transform: rotate(90deg);
+  }
+}
 
 @keyframes line {
   0% {
     stroke-dasharray: 2, 85.964;
-    -webkit-transform: rotate(0);
-            transform: rotate(0); }
+    transform: rotate(0);
+  }
   50% {
     stroke-dasharray: 65.973, 21.9911;
-    stroke-dashoffset: 0; }
+    stroke-dashoffset: 0;
+  }
   100% {
     stroke-dasharray: 2, 85.964;
     stroke-dashoffset: -65.973;
-            transform: rotate(90deg); }
+    transform: rotate(90deg); 
+  }
 }
 
 .main {
