--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -1,74 +1,30 @@
-* {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  width: 100%;
-  font-family: 'Helvetica', 'Verdana', sans-serif;
-  font-weight: 400;
-  font-display: optional;
-  color: #444;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-html {
-  overflow: hidden;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  align-content: stretch;
-  background: #ececec;
-}
-
-h1 {
-  font-weight: 400;
-  font-size: 20px;
-  margin: 0;
-  flex: 1;
-}
-
-.header {
-  width: 100%;
-  height: 56px;
-  color: #FFF;
-  background: #3F51B5;
+header {
+  background: #f4f5f6;
+  border-bottom: .1rem solid #d1d1d1;
+  display: block;
+  height: 5.2rem;
+  left: 0;
+  max-width: 100%;
   position: fixed;
-  font-size: 20px;
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 2px 9px 1px rgba(0, 0, 0, .12), 0 4px 2px -2px rgba(0, 0, 0, .2);
-  padding: 16px 16px 0;
-  will-change: transform;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  align-content: center;
-  transition: transform .233s cubic-bezier(0, 0, .21, 1) .1s;
-  z-index: 1000;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 
-  .button {
-    width: 24px;
-    height: 24px;
-    margin-right: 16px;
-    text-indent: -30000px;
-    overflow: hidden;
-    opacity: .54;
-    transition: opacity .333s cubic-bezier(0, 0, .21, 1);
-    border: none;
-    outline: none;
-    cursor: pointer;
+  h1 {
+    text-align: center;
   }
 }
+
+
+
+main {
+  margin-top: 5.2rem;
+}
+
+
+
+
 
 .loader {
   left: 50%;
@@ -104,53 +60,4 @@ h1 {
   to {
     transform: rotate(450deg);
   }
-}
-
-@-webkit-keyframes line {
-  0% {
-    stroke-dasharray: 2, 85.964;
-    transform: rotate(0);
-  }
-  50% {
-    stroke-dasharray: 65.973, 21.9911;
-    stroke-dashoffset: 0;
-  }
-  100% {
-    stroke-dasharray: 2, 85.964;
-    stroke-dashoffset: -65.973;
-    transform: rotate(90deg);
-  }
-}
-
-@keyframes line {
-  0% {
-    stroke-dasharray: 2, 85.964;
-    transform: rotate(0);
-  }
-  50% {
-    stroke-dasharray: 65.973, 21.9911;
-    stroke-dashoffset: 0;
-  }
-  100% {
-    stroke-dasharray: 2, 85.964;
-    stroke-dashoffset: -65.973;
-    transform: rotate(90deg);
-  }
-}
-
-.main {
-  padding-top: 60px;
-  flex: 1;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.card {
-  padding: 16px;
-  position: relative;
-  box-sizing: border-box;
-  background: #fff;
-  border-radius: 2px;
-  margin: 16px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
 }
