Adds updating of campaign

--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -16,6 +16,10 @@ header {
   }
 }
 
+body input,
+body textarea {
+  font: 1em 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+}
 
 
 main.container {
