Adds char count and linking of tags

--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -41,6 +41,15 @@ td a.bucket_delete {
   display: inline-block;
 }
 
+.char-count {
+  text-align: right;
+  margin-top: -1.5rem;
+}
+
+td.table-message {
+  width: 100%;
+}
+
 
 
 @media (max-width: 40.0rem) {
