--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -77,7 +77,7 @@ input.before-today::after {
 }
 
 
-.offline-ready {
+#offline-ready {
   background-color: #66A2F5;
   position: absolute;
   right: -1000px;
