Prevent page growing when dismissing dialog

--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -79,7 +79,7 @@ input.before-today::after {
 
 #offline-ready {
   background-color: #66A2F5;
-  position: absolute;
+  position: fixed;
   right: -1000px;
   color: white;
   bottom: 20px;
