--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -1,13 +1,25 @@
 $off-white: #f4f5f6;
 $light-grey: #d1d1d1;
 $grey: #ccc;
+$white: #fff;
 
+$app-blue: #66a2f5;
+$danger-red: #d8152c;
+$groovy-green: #44a334;
+$ominous-orange: #ea8c10;
+
+$mobile-breakpoint: 40rem;
+$tablet-breakpoint: 80rem;
+$desktop-breakpoint: 120rem;
+
+// App shell & app wide stuff
 
 header {
-  background: $off-white;
+  background: $app-blue;
   border-bottom: .1rem solid $light-grey;
   display: block;
   height: 5.2rem;
+  min-height: 5.2rem;
   left: 0;
   max-width: 100%;
   position: fixed;
@@ -16,8 +28,18 @@ header {
   width: 100%;
   z-index: 1;
 
+  @media (min-width: $mobile-breakpoint) {
+    height: 6.2rem;
+  }
+
   h1 {
+    color: $white;
     text-align: center;
+
+    @media (max-width: $mobile-breakpoint / 2) {
+      font-size: 2rem;
+      margin-top: 0.67em;
+    }
   }
 }
 
@@ -25,7 +47,6 @@ body input,
 body textarea {
   font: 1em 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
-
 
 .container {
   margin-top: 6rem;
@@ -36,26 +57,91 @@ body textarea {
   text-decoration: underline;
 }
 
-.icon {
-  padding: 7px 5px 0;
-  pointer-events: none;
+
+.column.stats {
+
+}
+.row.stat-container {
+  padding: 1rem 1rem 2rem;
+
+  @media (max-width: $mobile-breakpoint) {
+    padding: 0;
+    margin-bottom: 2rem;
+  }
+
+  .stats {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid $app-blue;
+    margin: 0 0 0.5rem 0;
+    padding:0;
+    border-radius: .5rem;
+
+    @media (min-width: $mobile-breakpoint) {
+      margin: 0 1rem;
+    }
+
+    @media (max-width: $mobile-breakpoint){
+      flex-direction: row;
+    }
+
+    span {
+      padding: 1.5rem .5rem;
+
+      @media (max-width: $mobile-breakpoint) {
+        font-size: 2rem;
+      }
+
+      &:first-child {
+        padding: 2rem;
+        font-weight: 600;
+        font-size: 3rem;
+
+        @media (max-width: $mobile-breakpoint) {
+          padding: 0 3rem;
+          font-weight: 300;
+        }
+      }
+
+      &:last-child {
+        background-color: lighten($app-blue, 10%);
+        color: $white;
+        width: 100%;
+        text-align: center;
+        font-size: 2rem;
+
+        &.green {
+          background-color: $groovy-green;
+        }
+
+        &.orange {
+          background-color: $ominous-orange;
+        }
+      }
+    }
+
+    @media (min-width: $mobile-breakpoint) {
+
+      &:first-child {
+        margin-left: 0;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
 }
 
-td a.bucket_edit,
-td a.bucket_delete,
-td a.post_edit,
-td a.post_delete {
-  display: inline-block;
-}
 
-.char-count {
-  margin-top: -1.5rem;
-  text-align: right;
-}
 
-td.table-message {
-  width: 100%;
-}
+
+
+
+
+// Form & buttons stuff
 
 input.invalid,
 textarea.invalid {
@@ -66,8 +152,42 @@ input.before-today::after {
   content: 'Date too early';
 }
 
+input[type=date] {
+  border: 1px solid $grey;
+}
+
 .button-wrapper {
   margin-top: 6rem;
+}
+
+.button,
+button,
+input[type=submit] {
+  background-color: $app-blue;
+  color: $white;
+  border-color: darken($app-blue, 5%);
+  transition: all .5s ease;
+
+  &:hover {
+    background-color: darken($app-blue, 15%);
+    transition: all .5s ease;
+    border-color: $app-blue;
+  }
+
+  &.danger {
+    background-color: $danger-red;
+    border-color: darken($danger-red, 5%);
+
+    &:hover {
+      background-color: lighten($danger-red, 10%);
+      border-color: $danger-red;
+    }
+  }
+}
+
+.char-count {
+  margin-top: -1.5rem;
+  text-align: right;
 }
 
 .image-preview-wrapper {
@@ -76,6 +196,7 @@ input.before-today::after {
   max-width: 300px;
 }
 
+// Ofline notification stuff
 
 #offline-ready {
   background-color: #66A2F5;
@@ -118,16 +239,48 @@ input.before-today::after {
 }
 
 
-@media (max-width: 40.0rem) {
+// Table stuff
+
+.half-width {
+  display: inline-block;
+  width: 49%;
+
+  &.second {
+    float: right;
+  }
+
+  input {
+    width: 100%;
+    padding: 0.6rem;
+    border-radius: .4rem;
+    height: 3.8rem;
+    padding: .6rem 1rem;
+  }
+}
+
+td.table-message {
+  width: 100%;
+}
+
+.icon {
+  padding: 7px 5px 0;
+  pointer-events: none;
+}
+
+td a.bucket_edit,
+td a.bucket_delete,
+td a.post_edit,
+td a.post_delete {
+  display: inline-block;
+}
+
+@media (max-width: $mobile-breakpoint) {
   .image-preview-wrapper {
     float: none;
     margin-top: 0;
     max-width: auto;
     text-align: center;
   }
-}
-
-@media (max-width: 40.0rem) {
 
   table,
   thead,
@@ -146,6 +299,7 @@ input.before-today::after {
 
   tr {
     border: 1px solid $grey;
+    margin-bottom: 1rem;
   }
 
 	td {
@@ -153,31 +307,44 @@ input.before-today::after {
 		border-bottom: 1px solid $off-white;
 		padding-left: 50%;
     position: relative;
+
+    a.bucket_edit,
+    a.bucket_delete,
+    a.post_edit,
+    a.post_delete {
+      padding-left: 0;
+    }
+
+    &::before {
+  		left: 1rem;
+      position: absolute;
+  		top: 6px;
+  		padding-right: 10px;
+  		white-space: nowrap;
+      width: 45%;
+      margin-top: .6rem;
+  	}
 	}
 
-  td a {
-    padding-left: 50%;
+  &.bucket-list {
+    td:nth-of-type(1) {
+      padding-left: 0;
+      padding: 1rem;
+      text-align: center;
+      font-size: 2rem;
+    }
+    td:nth-of-type(2)::before { content: 'Repeat'; }
+    td:nth-of-type(3)::before { content: 'Frequency'; }
+    td:nth-of-type(4)::before { content: 'Expiry'; }
+    td:nth-of-type(5)::before { content: 'Priority'; }
+    td:nth-of-type(6)::before { content: 'Max Per Day'; }
+    td:nth-of-type(7)::before { content: 'Actions'; }
   }
 
-  td a.bucket_edit,
-  td a.bucket_delete {
-    padding-left: 0;
+  &.post-list {
+    td:nth-of-type(1) { padding: 1rem; }
+    td:nth-of-type(2)::before { content: 'Expiry'; }
+    td:nth-of-type(3)::before { content: 'Repeat'; }
+    td:nth-of-type(4)::before { content: 'Actions'; }
   }
-
-	td::before {
-		left: 6px;
-    position: absolute;
-		top: 6px;
-		padding-right: 10px;
-		white-space: nowrap;
-    width: 45%;
-	}
-
-  td:nth-of-type(1)::before { content: 'Name'; }
-  td:nth-of-type(2)::before { content: 'Repeat'; }
-  td:nth-of-type(3)::before { content: 'Frequency'; }
-  td:nth-of-type(4)::before { content: 'Expiry'; }
-  td:nth-of-type(5)::before { content: 'Priority'; }
-  td:nth-of-type(6)::before { content: 'Max Per Day'; }
-  td:nth-of-type(7)::before { content: 'Actions'; }
 }
