--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -57,6 +57,21 @@ body textarea {
   text-decoration: underline;
 }
 
+.settings {
+  position: fixed;
+  top: 1.5rem;
+  right: 1.5rem;
+
+  img {
+    height: 2rem;
+    width: 2rem;
+  }
+
+  .fill-white {
+    fill: $white; 
+  }
+}
+
 
 
 // Info boxes
