--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -7,6 +7,7 @@ $app-blue: #66a2f5;
 $danger-red: #d8152c;
 $groovy-green: #44a334;
 $ominous-orange: #ea8c10;
+$perky-purple: #5111c6;
 
 $mobile-breakpoint: 40rem;
 $tablet-breakpoint: 80rem;
@@ -133,6 +134,10 @@ body textarea {
         &.orange {
           background-color: $ominous-orange;
         }
+
+        &.purple {
+          background-color: $perky-purple;
+        }
       }
     }
 
@@ -150,6 +155,10 @@ body textarea {
 }
 
 
+
+.red {
+  color: $danger-red;
+}
 
 
 
@@ -371,7 +380,7 @@ td a.post_delete {
   &.post-list {
     td:nth-of-type(1) { padding: 1rem; }
     td:nth-of-type(2)::before { content: 'Last Posted'; }
-    td:nth-of-type(3)::before { content: 'Repeat'; }
+    td:nth-of-type(3)::before { content: 'Attachment'; }
     td:nth-of-type(4)::before { content: 'Actions'; }
   }
 }
