--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -53,6 +53,44 @@ body textarea {
   margin-top: 7rem;
 }
 
+.cover {
+  padding: 2rem 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  opacity: 0.6;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #1A1A1A;
+  z-index: 1;
+  background-image: url("/public/images/cover-image.jpeg");
+  background-size: cover;
+  z-index: -1;
+}
+
+.login-screen{
+  padding: 2rem 0;
+  text-shadow: 0px 1px 6px rgba(0, 0, 0, 0.6);
+  display: flex;
+  height: 500px;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  z-index: 2;
+  color: $white;
+  text-align: center;
+}
+
+.login-screen .inner {
+  padding: 2rem;
+  background-color: rgba(20, 20, 20, .6);
+}
+
 .breadcrumb,
 #breadcrumb {
   text-decoration: underline;
